--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: npm ci
+    - name: Run Tests
+      run: npm test
     - name: Build
       run: npm run build
     - name: Deploy to Vercel
