--- a/.github/workflows/deploy-stg.yml
+++ b/.github/workflows/deploy-stg.yml
@@ -1,7 +1,7 @@
 name: Deploy to Vercel
 on:
-  pull_request_review:
-      types: [submitted]
+  pull_request:
+    types: [opened, reopened]
 
 # jobs:
 #   deploy:
