--- a/.github/workflows/deploy-stg.yml
+++ b/.github/workflows/deploy-stg.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Build app
-      run: npm run build && npm run generate
+      run: npm run build
     - name: Set AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
