--- a/.github/workflows/deploy-stg.yml
+++ b/.github/workflows/deploy-stg.yml
@@ -48,6 +48,8 @@ jobs:
       run: npm install
     - name: Build app
       run: npm run build
+      command:
+        echo */;
     - name: Set AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -55,6 +57,4 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
     - name: Deploy to S3
-      run: "aws s3 sync --delete .output/public/ s3://${{ env.S3_BUCKET_NAME }}"
-    - name: Invalidate cloudfront
-      run: "aws cloudfront create-invalidation --distribution-id ${{ env.CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'" 
+      run: "aws s3 sync --delete dist/ s3://${{ env.S3_BUCKET_NAME }}"
