--- a/.github/workflows/deploy-stg.yml
+++ b/.github/workflows/deploy-stg.yml
@@ -55,5 +55,8 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
+    - name: Upload to S3
+        run: |
+          aws s3 mb s3://${{ env.S3_BUCKET_NAME }}
     - name: Deploy to S3
       run: "aws s3 sync --delete dist/ s3://${{ env.S3_BUCKET_NAME }}"
