--- a/.github/workflows/deploy-stg.yml
+++ b/.github/workflows/deploy-stg.yml
@@ -26,9 +26,9 @@ env:
   AWS_REGION: us-west-2
   # PR_NUMBER: ${{ github.event.number }}
   # S3_BUCKET_NAME: ops-auto-demo-2-${{github.event.number}}
-  S3_BUCKET_NAME: ops-auto-demo-2
-  CLOUDFRONT_DISTRIBUTION_ID: E16XXFYTTKCM6N
-  CLOUDFRONT_DOMAIN_NAME: d1i9e3ca5iu1kp.cloudfront.net
+  S3_BUCKET_NAME: ops-website-dev-12
+  CLOUDFRONT_DISTRIBUTION_ID: E27J0OMR7IKJPF
+  CLOUDFRONT_DOMAIN_NAME: d12g8n7j01hnz2.cloudfront.net
   # CLOUDFRONT_DISTRIBUTION_ID: ETO6BXI5MZ802
   # CLOUDFRONT_DOMAIN_NAME: d1l4hqnfn2c0hd.cloudfront.net
   # OKTA_CLIENT_ID: ${{ secrets.OKTA_CLIENT_ID }}
